@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2006-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2006-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -49,16 +49,17 @@ import javax.persistence.TemporalType;
 import javax.persistence.Transient;
 import javax.xml.bind.annotation.XmlAttribute;
 import javax.xml.bind.annotation.XmlElement;
-import javax.xml.bind.annotation.XmlIDREF;
 import javax.xml.bind.annotation.XmlRootElement;
 import javax.xml.bind.annotation.XmlTransient;
 import javax.xml.bind.annotation.adapters.XmlJavaTypeAdapter;
 
+import org.codehaus.jackson.annotate.JsonIgnoreProperties;
 import org.hibernate.annotations.Type;
+import org.opennms.core.network.InetAddressXmlAdapter;
 import org.opennms.core.utils.AlphaNumeric;
 import org.opennms.core.utils.RrdLabelUtils;
-import org.opennms.core.utils.ThreadCategory;
-import org.opennms.core.xml.bind.InetAddressXmlAdapter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.core.style.ToStringCreator;
 
 /**
@@ -67,7 +68,11 @@ import org.springframework.core.style.ToStringCreator;
 @XmlRootElement(name = "snmpInterface")
 @Entity
 @Table(name = "snmpInterface")
+@JsonIgnoreProperties({"hibernateLazyInitializer", "handler"})
 public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
+	
+	private static final Logger LOG = LoggerFactory.getLogger(OnmsSnmpInterface.class);
+
     
     /**
      * 
@@ -124,7 +129,7 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
      * @param ifIndex a int.
      */
     public OnmsSnmpInterface(OnmsNode node, int ifIndex) {
-        this(node, new Integer(ifIndex));
+        this(node, Integer.valueOf(ifIndex));
     }
 
     /**
@@ -502,10 +507,11 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
      *
      * @return a {@link org.opennms.netmgt.model.OnmsNode} object.
      */
-    @XmlIDREF
     @ManyToOne(optional = false, fetch = FetchType.LAZY)
     @JoinColumn(name = "nodeId")
     @XmlElement(name="nodeId")
+    //@XmlIDREF
+    @XmlJavaTypeAdapter(NodeIdAdapter.class)
     public OnmsNode getNode() {
         return m_node;
     }
@@ -524,6 +530,7 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
      *
      * @return a {@link java.lang.String} object.
      */
+    @Override
     public String toString() {
         return new ToStringCreator(this)
             .append("snmpipadentnetmask", getNetMask())
@@ -538,12 +545,14 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
             .append("snmpifalias", getIfAlias())
             .append("snmpCollect", getCollect())
             .append("snmpPoll", getPoll())
+            .append("nodeId", getNode() == null ? null : getNode().getId())
             .append("lastCapsdPoll", getLastCapsdPoll())
             .append("lastSnmpPoll", getLastSnmpPoll())
             .toString();
     }
 
     /** {@inheritDoc} */
+    @Override
     public void visit(EntityVisitor visitor) {
         visitor.visitSnmpInterface(this);
         visitor.visitSnmpInterfaceComplete(this);
@@ -554,8 +563,9 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
      *
      * @return a {@link java.util.Set} object.
      */
-    @XmlIDREF
     @OneToMany(mappedBy = "snmpInterface", fetch = FetchType.LAZY)
+    //@XmlIDREF
+    @XmlJavaTypeAdapter(SnmpInterfaceIdAdapter.class)
     public Set<OnmsIpInterface> getIpInterfaces() {
         return m_ipInterfaces;
     }
@@ -593,14 +603,7 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
         return getNode().getPrimaryInterface();
     }
 
-    /**
-     * <p>log</p>
-     *
-     * @return a {@link org.opennms.core.utils.ThreadCategory} object.
-     */
-    public ThreadCategory log() {
-        return ThreadCategory.getInstance(getClass());
-    }
+    
 
     /**
      * <p>computePhysAddrForRRD</p>
@@ -620,17 +623,10 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
             if (parsedPhysAddr.length() == 12) {
                 physAddrForRRD = parsedPhysAddr;
             } else {
-                if (log().isDebugEnabled()) {
-                    log().debug(
-                                "physAddrForRRD: physical address len "
-                                        + "is NOT 12, physAddr="
-                                        + parsedPhysAddr);
-                }
+                    LOG.debug("physAddrForRRD: physical address len is NOT 12, physAddr={}", parsedPhysAddr);
             }
         }
-        log().debug(
-                    "computed physAddr for " + this + " to be "
-                            + physAddrForRRD);
+        LOG.debug("computed physAddr for {} to be {}", this, physAddrForRRD);
         return physAddrForRRD;
     }
 
@@ -655,10 +651,7 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
         } else if (getIfDescr() != null) {
             label = AlphaNumeric.parseAndReplace(getIfDescr(), '_');
         } else {
-            log().info(
-                       "Interface ("
-                               + this
-                               + ") has no ifName and no ifDescr...setting to label to 'no_ifLabel'.");
+            LOG.info("Interface ({}) has no ifName and no ifDescr...setting to label to 'no_ifLabel'.", this);
             label = "no_ifLabel";
         }
         return label;
@@ -679,6 +672,7 @@ public class OnmsSnmpInterface extends OnmsEntity implements Serializable {
      * @param iface a {@link org.opennms.netmgt.model.OnmsIpInterface} object.
      */
     public void addIpInterface(OnmsIpInterface iface) {
+        iface.setSnmpInterface(this);
         m_ipInterfaces.add(iface);
     }
 
