@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2009-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2009-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -30,44 +30,37 @@ package org.opennms.netmgt.poller.monitors;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
+import java.nio.charset.Charset;
+import java.util.List;
 import java.util.Map;
 
-import org.apache.http.HttpHost;
-import org.apache.http.HttpRequest;
-import org.apache.http.HttpRequestInterceptor;
-import org.apache.http.HttpResponse;
+import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpVersion;
-import org.apache.http.auth.AuthScope;
-import org.apache.http.auth.AuthState;
-import org.apache.http.auth.Credentials;
-import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.CredentialsProvider;
+import org.apache.http.NameValuePair;
+import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.params.ClientPNames;
-import org.apache.http.client.protocol.ClientContext;
 import org.apache.http.client.utils.URIBuilder;
-import org.apache.http.impl.auth.BasicScheme;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.params.CoreConnectionPNames;
-import org.apache.http.params.CoreProtocolPNames;
-import org.apache.http.protocol.ExecutionContext;
-import org.apache.http.protocol.HttpContext;
+import org.apache.http.client.utils.URLEncodedUtils;
 import org.apache.http.util.EntityUtils;
 import org.opennms.core.utils.InetAddressUtils;
 import org.opennms.core.utils.ParameterMap;
-import org.opennms.netmgt.model.PollStatus;
+import org.opennms.core.web.HttpClientWrapper;
 import org.opennms.netmgt.poller.Distributable;
 import org.opennms.netmgt.poller.MonitoredService;
+import org.opennms.netmgt.poller.PollStatus;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 @Distributable
 /**
  * <p>WebMonitor class.</p>
  *
- * @author ranger
- * @version $Id: $
+ * @author <A HREF="mailto:ranger@opennms.org">Benjamin Reed</A>
+ * @author <A HREF="mailto:cliles@capario.com">Chris Liles</A>
+ * @author <A HREF="http://www.opennms.org/">OpenNMS</A>
  */
 public class WebMonitor extends AbstractServiceMonitor {
-
+    private static final Logger LOG = LoggerFactory.getLogger(WebMonitor.class);
     static Integer DEFAULT_TIMEOUT = 3000;
     static Integer DEFAULT_PORT = 80;
     static String DEFAULT_USER_AGENT = "OpenNMS WebMonitor";
@@ -81,7 +74,7 @@ public class WebMonitor extends AbstractServiceMonitor {
     @Override
     public PollStatus poll(MonitoredService svc, Map<String,Object> map) {
         PollStatus pollStatus = PollStatus.unresponsive();
-        DefaultHttpClient httpClient = new DefaultHttpClient();
+        HttpClientWrapper clientWrapper = HttpClientWrapper.create();
 
         try {
             final String hostAddress = InetAddressUtils.str(svc.getAddress());
@@ -91,72 +84,54 @@ public class WebMonitor extends AbstractServiceMonitor {
             ub.setHost(hostAddress);
             ub.setPort(ParameterMap.getKeyedInteger(map, "port", DEFAULT_PORT));
             ub.setPath(ParameterMap.getKeyedString(map, "path", DEFAULT_PATH));
-            HttpGet getMethod = new HttpGet(ub.build());
-            httpClient.getParams().setIntParameter(CoreConnectionPNames.CONNECTION_TIMEOUT, ParameterMap.getKeyedInteger(map, "timeout", DEFAULT_TIMEOUT));
-            httpClient.getParams().setIntParameter(CoreConnectionPNames.SO_TIMEOUT, ParameterMap.getKeyedInteger(map, "timeout", DEFAULT_TIMEOUT));
-            httpClient.getParams().setParameter( CoreProtocolPNames.USER_AGENT, ParameterMap.getKeyedString(map,"user-agent",DEFAULT_USER_AGENT));
 
-            // Set the virtual host to the 'virtual-host' parameter or the host address if 'virtual-host' is not present
-            getMethod.getParams().setParameter(ClientPNames.VIRTUAL_HOST,
-                new HttpHost(
-                    ParameterMap.getKeyedString(map,"virtual-host", hostAddress), 
-                    ParameterMap.getKeyedInteger(map, "port", DEFAULT_PORT)
-                )
-            );
-
-            if(ParameterMap.getKeyedBoolean(map, "http-1.0", false)) {
-                httpClient.getParams().setParameter(CoreProtocolPNames.PROTOCOL_VERSION, HttpVersion.HTTP_1_0);
+            String queryString = ParameterMap.getKeyedString(map,"queryString",null);
+            if (queryString != null && !queryString.trim().isEmpty()) {
+                final List<NameValuePair> params = URLEncodedUtils.parse(queryString, Charset.forName("UTF-8"));
+                ub.setParameters(params);
             }
 
-            for(Object okey : map.keySet()) {
-                String key = okey.toString();
+            final HttpGet getMethod = new HttpGet(ub.build());
+            clientWrapper.setConnectionTimeout(ParameterMap.getKeyedInteger(map, "timeout", DEFAULT_TIMEOUT))
+                .setSocketTimeout(ParameterMap.getKeyedInteger(map, "timeout", DEFAULT_TIMEOUT));
+
+            final String userAgent = ParameterMap.getKeyedString(map,"user-agent",DEFAULT_USER_AGENT);
+            if (userAgent != null && !userAgent.trim().isEmpty()) {
+                clientWrapper.setUserAgent(userAgent);
+            }
+
+            final String virtualHost = ParameterMap.getKeyedString(map,"virtual-host", hostAddress);
+            if (virtualHost != null && !virtualHost.trim().isEmpty()) {
+                clientWrapper.setVirtualHost(virtualHost);
+            }
+
+            if(ParameterMap.getKeyedBoolean(map, "http-1.0", false)) {
+                clientWrapper.setVersion(HttpVersion.HTTP_1_0);
+            }
+
+            for(final Object okey : map.keySet()) {
+                final String key = okey.toString();
                 if(key.matches("header_[0-9]+$")){
-                    String headerName  = ParameterMap.getKeyedString(map,key,null);
-                    String headerValue = ParameterMap.getKeyedString(map,key + "_value",null);
+                    final String headerName  = ParameterMap.getKeyedString(map,key,null);
+                    final String headerValue = ParameterMap.getKeyedString(map,key + "_value",null);
                     getMethod.setHeader(headerName, headerValue);
                 }
             }
 
-            if(ParameterMap.getKeyedBoolean(map,"auth-enabled",false)){
-                httpClient.getCredentialsProvider().setCredentials(AuthScope.ANY, new UsernamePasswordCredentials( ParameterMap.getKeyedString(map, "auth-user", DEFAULT_USER), ParameterMap.getKeyedString(map, "auth-password", DEFAULT_PASSWORD)));
+            if(ParameterMap.getKeyedBoolean(map,"auth-enabled",false)) {
+                clientWrapper.addBasicCredentials(ParameterMap.getKeyedString(map, "auth-user", DEFAULT_USER), ParameterMap.getKeyedString(map, "auth-password", DEFAULT_PASSWORD));
                 if (ParameterMap.getKeyedBoolean(map, "auth-preemptive", true)) {
-                    /**
-                     * Add an HttpRequestInterceptor that will perform preemptive auth
-                     * @see http://hc.apache.org/httpcomponents-client-4.0.1/tutorial/html/authentication.html
-                     */
-                    HttpRequestInterceptor preemptiveAuth = new HttpRequestInterceptor() {
-
-                        public void process(final HttpRequest request, final HttpContext context) throws IOException {
-
-                            AuthState authState = (AuthState)context.getAttribute(ClientContext.TARGET_AUTH_STATE);
-                            CredentialsProvider credsProvider = (CredentialsProvider)context.getAttribute(ClientContext.CREDS_PROVIDER);
-                            HttpHost targetHost = (HttpHost)context.getAttribute(ExecutionContext.HTTP_TARGET_HOST);
-
-                            // If not auth scheme has been initialized yet
-                            if (authState.getAuthScheme() == null) {
-                                AuthScope authScope = new AuthScope(targetHost.getHostName(), targetHost.getPort());
-                                // Obtain credentials matching the target host
-                                Credentials creds = credsProvider.getCredentials(authScope);
-                                // If found, generate BasicScheme preemptively
-                                if (creds != null) {
-                                    authState.update(new BasicScheme(), creds);
-                                }
-                            }
-                        }
-
-                    };
-                    httpClient.addRequestInterceptor(preemptiveAuth, 0);
+                    clientWrapper.usePreemptiveAuth();
                 }
             }
 
-            log().debug("httpClient request with the following parameters: " + httpClient);
-            log().debug("getMethod parameters: " + getMethod);
-            HttpResponse response = httpClient.execute(getMethod);
+            LOG.debug("getMethod parameters: {}", getMethod);
+            CloseableHttpResponse response = clientWrapper.execute(getMethod);
             int statusCode = response.getStatusLine().getStatusCode();
             String statusText = response.getStatusLine().getReasonPhrase();
             String expectedText = ParameterMap.getKeyedString(map,"response-text",null);
 
-            log().debug("returned results are:");
+            LOG.debug("returned results are:");
 
             if(!inRange(ParameterMap.getKeyedString(map, "response-range", DEFAULT_HTTP_STATUS_RANGE),statusCode)){
                 pollStatus = PollStatus.unavailable(statusText);
@@ -183,20 +158,18 @@ public class WebMonitor extends AbstractServiceMonitor {
             }
 
         } catch (IOException e) {
-            log().info(e.getMessage());
+            LOG.info(e.getMessage());
         } catch (URISyntaxException e) {
-            log().info(e.getMessage());
+            LOG.info(e.getMessage());
         } finally {
-            if (httpClient != null) {
-                httpClient.getConnectionManager().shutdown();
-            }
+            IOUtils.closeQuietly(clientWrapper);
         }
         return pollStatus;
     }
 
     private boolean inRange(String range,Integer val){
-        String boundries[] = range.split("-");
-        if(val < new Integer(boundries[0]) || val > new Integer(boundries[1]))
+        String[] boundries = range.split("-");
+        if(val < Integer.valueOf(boundries[0]) || val > Integer.valueOf(boundries[1]))
             return false;
         else
             return true;
