@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2006-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2002-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -44,12 +44,8 @@ import java.util.Vector;
  *
  * @author <A HREF="mailto:jason@opennms.org">Jason Johns </A>
  * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @author <A HREF="mailto:jason@opennms.org">Jason Johns </A>
- * @author <A HREF="http://www.opennms.org/">OpenNMS </A>
- * @version 1.1.1.1
- * @since 1.8.1
  */
-public class DutySchedule {
+public class DutySchedule implements Cloneable {
     /**
      * Each boolean in the bit set represents a day of the week. Monday = 0,
      * Tuesday = 1 ... Sunday = 6
@@ -119,7 +115,7 @@ public class DutySchedule {
      * @param aSchedule
      *            Vector filled with 7 Boolean objects and two String objects
      */
-    public DutySchedule(Vector<?> aSchedule) {
+    public DutySchedule(List<?> aSchedule) {
         m_days = new BitSet(7);
 
         // set each day that is set to true
@@ -249,7 +245,7 @@ public class DutySchedule {
         Vector<Object> vector = new Vector<Object>();
 
         for (int i = 0; i < 7; i++) {
-            vector.add(new Boolean(m_days.get(i)));
+            vector.add(Boolean.valueOf(m_days.get(i)));
         }
 
         vector.add(String.valueOf(m_startTime));
@@ -354,6 +350,7 @@ public class DutySchedule {
      *
      * @return a string representation of this DutySchedule
      */
+    @Override
     public String toString() {
         StringBuffer buffer = new StringBuffer();
 
@@ -385,6 +382,7 @@ public class DutySchedule {
      *
      * @return a {@link org.opennms.web.admin.users.parsers.DutySchedule} object.
      */
+    @Override
     public DutySchedule clone() {
         return new DutySchedule(toString());
     }
