@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2007-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2007-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -41,12 +41,12 @@ import java.util.List;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-import org.opennms.core.utils.ThreadCategory;
 import org.opennms.web.map.view.Manager;
 import org.opennms.web.map.view.VElement;
 import org.opennms.web.map.view.VMap;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.web.servlet.ModelAndView;
-import org.springframework.web.servlet.mvc.Controller;
 
 
 /**
@@ -59,8 +59,10 @@ import org.springframework.web.servlet.mvc.Controller;
  * @version $Id: $
  * @since 1.8.1
  */
-public class DeleteElementsController implements Controller {
-	ThreadCategory log;
+public class DeleteElementsController extends MapsLoggingController {
+	
+	private static final Logger LOG = LoggerFactory.getLogger(DeleteElementsController.class);
+
 
 	private Manager manager;
 	
@@ -84,19 +86,17 @@ public class DeleteElementsController implements Controller {
 	}
 
 	/** {@inheritDoc} */
-	public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws IOException {
+        @Override
+	protected ModelAndView handleRequestInternal(HttpServletRequest request, HttpServletResponse response) throws IOException {
 		
-		ThreadCategory.setPrefix(MapsConstants.LOG4J_CATEGORY);
-		log = ThreadCategory.getInstance(this.getClass());
 		String action = request.getParameter("action");
 		String elems = request.getParameter("elems");
-		log.debug("Adding elements action:"+action+", elems="+elems );
+		LOG.debug("Adding elements action:{}, elems={}", action, elems );
 		
 		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(response.getOutputStream(), "UTF-8"));
 		try {
 			VMap map = manager.openMap();
-			if(log.isDebugEnabled())
-				log.debug("Got map from manager "+map);
+				LOG.debug("Got map from manager {}", map);
 			
 			Integer[] elemeids = null;
 			String type = MapsConstants.NODE_TYPE;
@@ -104,7 +104,7 @@ public class DeleteElementsController implements Controller {
             String[] mapids = elems.split(",");
             elemeids = new Integer[mapids.length];
             for (int i = 0; i<mapids.length;i++) {
-                elemeids[i] = new Integer(mapids[i]);
+                elemeids[i] = Integer.valueOf(mapids[i]);
             }
 
 			boolean actionfound = false;
@@ -130,7 +130,7 @@ public class DeleteElementsController implements Controller {
 			} 
 			bw.write(ResponseAssembler.getDeleteElementsResponse(velemsids));
 		} catch (Throwable e) {
-			log.error("Error while adding nodes for action: "+action,e);
+			LOG.error("Error while adding nodes for action: {}", action,e);
 			bw.write(ResponseAssembler.getMapErrorResponse(action));
 		} finally {
 			bw.close();
