@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2010-2012 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2012 The OpenNMS Group, Inc.
+ * Copyright (C) 2010-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -36,22 +36,18 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.util.ArrayList;
-
 import java.util.List;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
-
-import org.opennms.core.utils.ThreadCategory;
 import org.opennms.core.utils.WebSecurityUtils;
-
-
-import org.opennms.web.map.MapsConstants;
-import org.opennms.web.map.view.*;
-
+import org.opennms.web.map.view.Manager;
+import org.opennms.web.map.view.VElement;
+import org.opennms.web.map.view.VMap;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.web.servlet.ModelAndView;
-import org.springframework.web.servlet.mvc.Controller;
 
 
 /**
@@ -64,8 +60,10 @@ import org.springframework.web.servlet.mvc.Controller;
  * @version $Id: $
  * @since 1.8.1
  */
-public class SearchMapsController implements Controller {
-	ThreadCategory log;
+public class SearchMapsController extends MapsLoggingController {
+	
+	private static final Logger LOG = LoggerFactory.getLogger(SearchMapsController.class);
+
 
 	private Manager manager;
 	
@@ -89,44 +87,42 @@ public class SearchMapsController implements Controller {
 	}
 
 	/** {@inheritDoc} */
-	public ModelAndView handleRequest(HttpServletRequest request, HttpServletResponse response) throws IOException {
-		
-		ThreadCategory.setPrefix(MapsConstants.LOG4J_CATEGORY);
-		log = ThreadCategory.getInstance(this.getClass());
+        @Override
+	protected ModelAndView handleRequestInternal(HttpServletRequest request, HttpServletResponse response) throws IOException {
 	    int mapWidth = WebSecurityUtils.safeParseInt(request
 	                                                   .getParameter("MapWidth"));
         int mapHeight = WebSecurityUtils.safeParseInt(request
 	                                                       .getParameter("MapHeight"));
 
-        log.debug("Current mapWidth=" + mapWidth + " and MapHeight=" + mapHeight);
+        LOG.debug("Current mapWidth={} and MapHeight={}", mapWidth, mapHeight);
 
         int d = WebSecurityUtils.safeParseInt(request
                                                      .getParameter("MapElemDimension"));
         
-        log.debug("default element dimension: "+d );
+        LOG.debug("default element dimension: {}", d );
 
 
         String elems = request.getParameter("elems");
-        log.debug("Adding Searching Maps: elems="+elems );
+        LOG.debug("Adding Searching Maps: elems={}", elems );
 
 
         int n = mapWidth /4/d;
         int k = mapHeight/2/d;
-        log.debug("Max number of element on the row: "+n );
-        log.debug("Max number of element in the map: "+n * k );
+        LOG.debug("Max number of element on the row: {}", n );
+        LOG.debug("Max number of element in the map: {}", n * k );
 
         String[] smapids = elems.split(",");
 
-        log.debug("Map Element to add to the Search Map: " + smapids.length);
+        LOG.debug("Map Element to add to the Search Map: {}", smapids.length);
 
         while (smapids.length > n*k) {
-            log.info("the map dimension is too big: resizing");
+            LOG.info("the map dimension is too big: resizing");
             d = d - 5;
-            log.info("new element dimension: " + d);
+            LOG.info("new element dimension: {}", d);
             n = mapWidth /4/d;
             k = mapHeight/2/d;
-            log.debug("Recalculated - Max number of element on the row: "+n );
-            log.debug("Recalculated - Max number of element in the map: "+n * k );
+            LOG.debug("Recalculated - Max number of element on the row: {}", n );
+            LOG.debug("Recalculated - Max number of element in the map: {}", n * k );
         }
 		
         BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(response
@@ -153,17 +149,17 @@ public class SearchMapsController implements Controller {
                         s++;
        		        }
 			    }
-			    velems.add(manager.newElement(MapsConstants.SEARCH_MAP, new Integer(smapids[i]), MapsConstants.MAP_TYPE, null, x*4*d+s*2*d, y*2*d+d));
+			    velems.add(manager.newElement(MapsConstants.SEARCH_MAP, Integer.valueOf(smapids[i]), MapsConstants.MAP_TYPE, null, x*4*d+s*2*d, y*2*d+d));
 			} // end for
 
 			//get map
             VMap map = manager.searchMap(request
                                          .getRemoteUser(), request.getRemoteUser(),
                                          mapWidth, mapHeight,velems);
-            log.debug("Got search map from manager "+map);
+            LOG.debug("Got search map from manager {}", map);
 			bw.write(ResponseAssembler.getMapResponse(map));
 		} catch (Throwable e) {
-			log.error("Error while adding Maps: ",e);
+			LOG.error("Error while adding Maps: ",e);
 			bw.write(ResponseAssembler.getMapErrorResponse(MapsConstants.SEARCHMAPS_ACTION));
 		} finally {
 			bw.close();
