@@ -1,22 +1,22 @@
 /*******************************************************************************
  * This file is part of OpenNMS(R).
  *
- * Copyright (C) 2009-2013 The OpenNMS Group, Inc.
- * OpenNMS(R) is Copyright (C) 1999-2013 The OpenNMS Group, Inc.
+ * Copyright (C) 2009-2014 The OpenNMS Group, Inc.
+ * OpenNMS(R) is Copyright (C) 1999-2014 The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
  *
  * OpenNMS(R) is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published
+ * it under the terms of the GNU Affero General Public License as published
  * by the Free Software Foundation, either version 3 of the License,
  * or (at your option) any later version.
  *
  * OpenNMS(R) is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Affero General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
+ * You should have received a copy of the GNU Affero General Public License
  * along with OpenNMS(R).  If not, see:
  *      http://www.gnu.org/licenses/
  *
@@ -38,25 +38,30 @@ import java.util.Map;
 
 import org.exolab.castor.xml.MarshalException;
 import org.exolab.castor.xml.ValidationException;
-import org.opennms.core.db.DataSourceFactory;
-import org.opennms.core.utils.LogUtils;
 import org.opennms.core.utils.ParameterMap;
 import org.opennms.netmgt.collectd.wmi.WmiAgentState;
 import org.opennms.netmgt.collectd.wmi.WmiCollectionAttributeType;
 import org.opennms.netmgt.collectd.wmi.WmiCollectionResource;
 import org.opennms.netmgt.collectd.wmi.WmiCollectionSet;
 import org.opennms.netmgt.collectd.wmi.WmiMultiInstanceCollectionResource;
+import org.opennms.netmgt.collectd.wmi.WmiResourceType;
 import org.opennms.netmgt.collectd.wmi.WmiSingleInstanceCollectionResource;
+import org.opennms.netmgt.collection.api.AttributeGroupType;
+import org.opennms.netmgt.collection.api.CollectionAgent;
+import org.opennms.netmgt.collection.api.CollectionSet;
+import org.opennms.netmgt.collection.api.ServiceCollector;
+import org.opennms.netmgt.collection.support.IndexStorageStrategy;
 import org.opennms.netmgt.config.DataCollectionConfigFactory;
 import org.opennms.netmgt.config.WmiDataCollectionConfigFactory;
 import org.opennms.netmgt.config.WmiPeerFactory;
-import org.opennms.netmgt.config.collector.AttributeGroupType;
-import org.opennms.netmgt.config.collector.CollectionSet;
+import org.opennms.netmgt.config.datacollection.PersistenceSelectorStrategy;
+import org.opennms.netmgt.config.datacollection.ResourceType;
+import org.opennms.netmgt.config.datacollection.StorageStrategy;
 import org.opennms.netmgt.config.wmi.Attrib;
 import org.opennms.netmgt.config.wmi.WmiCollection;
 import org.opennms.netmgt.config.wmi.Wpm;
-import org.opennms.netmgt.model.RrdRepository;
-import org.opennms.netmgt.model.events.EventProxy;
+import org.opennms.netmgt.events.api.EventProxy;
+import org.opennms.netmgt.rrd.RrdRepository;
 import org.opennms.protocols.wmi.WmiClient;
 import org.opennms.protocols.wmi.WmiException;
 import org.opennms.protocols.wmi.WmiManager;
@@ -65,6 +70,8 @@ import org.opennms.protocols.wmi.WmiResult;
 import org.opennms.protocols.wmi.wbem.OnmsWbemObject;
 import org.opennms.protocols.wmi.wbem.OnmsWbemObjectSet;
 import org.opennms.protocols.wmi.wbem.OnmsWbemProperty;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * <P>
@@ -76,14 +83,18 @@ import org.opennms.protocols.wmi.wbem.OnmsWbemProperty;
  * @author <a href="http://www.opennms.org">OpenNMS</a>
  */
 public class WmiCollector implements ServiceCollector {
+	
+	private static final Logger LOG = LoggerFactory.getLogger(WmiCollector.class);
+
 
     // Don't make this static because each service will have its own
     // copy and the key won't require the service name as part of the key.
-    private final HashMap<Integer, WmiAgentState> m_scheduledNodes = new HashMap<Integer, WmiAgentState>();
-    private HashMap<String, AttributeGroupType> m_groupTypeList = new HashMap<String, AttributeGroupType>();
-    private HashMap<String, WmiCollectionAttributeType> m_attribTypeList = new HashMap<String, WmiCollectionAttributeType>();
+    private final Map<Integer, WmiAgentState> m_scheduledNodes = new HashMap<Integer, WmiAgentState>();
+    private Map<String, AttributeGroupType> m_groupTypeList = new HashMap<String, AttributeGroupType>();
+    private Map<String, WmiCollectionAttributeType> m_attribTypeList = new HashMap<String, WmiCollectionAttributeType>();
 
     /** {@inheritDoc} */
+    @Override
     public CollectionSet collect(final CollectionAgent agent, final EventProxy eproxy, final Map<String, Object> parameters) {
 
         String collectionName = ParameterMap.getKeyedString(parameters, "collection", ParameterMap.getKeyedString(parameters, "wmi-collection", null));
@@ -99,8 +110,9 @@ public class WmiCollector implements ServiceCollector {
         loadAttributeTypeList(collection);
 
         // Create a new collection set.
-        final WmiCollectionSet collectionSet = new WmiCollectionSet(agent);        
+        final WmiCollectionSet collectionSet = new WmiCollectionSet();
         collectionSet.setCollectionTimestamp(new Date());
+        final WmiSingleInstanceCollectionResource nodeResource = new WmiSingleInstanceCollectionResource(agent);
 
         // Iterate through the WMI collection groups.
         for (final Wpm wpm : collection.getWpms().getWpm()) {
@@ -145,9 +157,9 @@ public class WmiCollector implements ServiceCollector {
                                 } else {
                                     instance = propVal.toString();
                                 }
-                                resource = new WmiMultiInstanceCollectionResource(agent,instance,wpm.getResourceType());
+                                resource = new WmiMultiInstanceCollectionResource(agent,instance,getWmiResourceType(agent, wpm.getResourceType()));
                             } else {
-                                resource = new WmiSingleInstanceCollectionResource(agent);
+                                resource = nodeResource;
                             }
 
 
@@ -156,17 +168,17 @@ public class WmiCollector implements ServiceCollector {
                                 final WmiCollectionAttributeType attribType = m_attribTypeList.get(attrib.getName());
                                 resource.setAttributeValue(attribType, prop.getWmiValue().toString());
                             }
-                            collectionSet.getResources().add(resource);
+                            collectionSet.getCollectionResources().add(resource);
                         }
                     }
                 } catch (final WmiException e) {
-                    LogUtils.infof(this, e, "unable to collect params for wpm '%s'", wpm.getName());
+                    LOG.info("unable to collect params for wpm '{}'", wpm.getName(), e);
                 } finally {
                     if (client != null) {
                         try {
                             client.disconnect();
                         } catch (final WmiException e) {
-                            LogUtils.warnf(this, e, "An error occurred disconnecting while collecting from WMI.");
+                            LOG.warn("An error occurred disconnecting while collecting from WMI.", e);
                         }
                     }
                 }
@@ -175,7 +187,7 @@ public class WmiCollector implements ServiceCollector {
         collectionSet.setStatus(ServiceCollector.COLLECTION_SUCCEEDED);
         return collectionSet;
     }
-
+    
     private void loadAttributeGroupList(final WmiCollection collection) {
         for (final Wpm wpm : collection.getWpms().getWpm()) {
             final AttributeGroupType attribGroupType1 = new AttributeGroupType(wpm.getName(), wpm.getIfType());
@@ -194,7 +206,7 @@ public class WmiCollector implements ServiceCollector {
     }
 
     private boolean isGroupAvailable(final WmiAgentState agentState, final Wpm wpm) {
-        LogUtils.debugf(this, "Checking availability of group %s via object %s of class %s in namespace %s", wpm.getName(), wpm.getKeyvalue(), wpm.getWmiClass(), wpm.getWmiNamespace());
+        LOG.debug("Checking availability of group {} via object {} of class {} in namespace {}", wpm.getName(), wpm.getKeyvalue(), wpm.getWmiClass(), wpm.getWmiNamespace());
         WmiManager manager = null;
 
         /*
@@ -215,10 +227,10 @@ public class WmiCollector implements ServiceCollector {
             final boolean isAvailable = (result.getResultCode() == WmiResult.RES_STATE_OK);
 
             agentState.setGroupIsAvailable(wpm.getName(), isAvailable);
-            LogUtils.debugf(this, "Group %s is %s%s.", wpm.getName(), (isAvailable ? "" : "not "), "available");
+            LOG.debug("Group {} is {}{}.", wpm.getName(), (isAvailable ? "" : "not "), "available");
         } catch (final WmiException e) {
             // Log a warning signifying that this group is unavailable.
-            LogUtils.warnf(this, e, "Error checking group (%s) availability.", wpm.getName());
+            LOG.warn("Error checking group ({}) availability.", wpm.getName(), e);
             // Set the group as unavailable.
             agentState.setGroupIsAvailable(wpm.getName(), false);
             
@@ -229,60 +241,75 @@ public class WmiCollector implements ServiceCollector {
                 try {
                     manager.close();
                 } catch (WmiException e) {
-                    LogUtils.warnf(this, e, "An error occurred closing the WMI Manager");
+                    LOG.warn("An error occurred closing the WMI Manager", e);
                 }
             }
         }
         return true;
     }
 
+    private WmiResourceType getWmiResourceType(CollectionAgent agent, String resourceType){
+        ResourceType rt = DataCollectionConfigFactory.getInstance().getConfiguredResourceTypes().get(resourceType);
+        if (rt == null) {
+            LOG.debug("getWmiResourceType: using default WMI resource type strategy - index / all");
+            rt = new ResourceType();
+            rt.setName(resourceType);
+            rt.setStorageStrategy(new StorageStrategy());
+            rt.getStorageStrategy().setClazz(IndexStorageStrategy.class.getName());
+            rt.setPersistenceSelectorStrategy(new PersistenceSelectorStrategy());
+            rt.getPersistenceSelectorStrategy().setClazz(PersistAllSelectorStrategy.class.getName());
+        }
+        WmiResourceType type = new WmiResourceType(agent, rt);
+        return type;
+    }
+    
     /** {@inheritDoc} */
+    @Override
     public void initialize(final Map<String, String> parameters) {
-        LogUtils.debugf(this, "initialize: Initializing WmiCollector.");
+        LOG.debug("initialize: Initializing WmiCollector.");
         m_scheduledNodes.clear();
         initWMIPeerFactory();
         initWMICollectionConfig();
-        initDatabaseConnectionFactory();
         initializeRrdRepository();
     }
 
     private void initWMIPeerFactory() {
-        LogUtils.debugf(this, "initialize: Initializing WmiPeerFactory");
+        LOG.debug("initialize: Initializing WmiPeerFactory");
         try {
             WmiPeerFactory.init();
         } catch (final MarshalException e) {
-            LogUtils.errorf(this, e, "initialize: Error marshalling configuration.");
+            LOG.error("initialize: Error marshalling configuration.", e);
             throw new UndeclaredThrowableException(e);
         } catch (final ValidationException e) {
-            LogUtils.errorf(this, e, "initialize: Error validating configuration.");
+            LOG.error("initialize: Error validating configuration.", e);
             throw new UndeclaredThrowableException(e);
         } catch (final IOException e) {
-            LogUtils.errorf(this, e, "initialize: Error reading configuration.");
+            LOG.error("initialize: Error reading configuration.", e);
             throw new UndeclaredThrowableException(e);
         }
     }
 
     private void initWMICollectionConfig() {
-        LogUtils.debugf(this, "initialize: Initializing collector: %s", getClass());
+        LOG.debug("initialize: Initializing collector: {}", getClass());
         try {
             WmiDataCollectionConfigFactory.init();
         } catch (final MarshalException e) {
-            LogUtils.errorf(this, e, "initialize: Error marshalling configuration.");
+            LOG.error("initialize: Error marshalling configuration.", e);
             throw new UndeclaredThrowableException(e);
         } catch (ValidationException e) {
-            LogUtils.errorf(this, e, "initialize: Error validating configuration.");
+            LOG.error("initialize: Error validating configuration.", e);
             throw new UndeclaredThrowableException(e);
         } catch (FileNotFoundException e) {
-            LogUtils.errorf(this, e, "initialize: Error locating configuration.");
+            LOG.error("initialize: Error locating configuration.", e);
             throw new UndeclaredThrowableException(e);
         } catch (IOException e) {
-            LogUtils.errorf(this, e, "initialize: Error reading configuration.");
+            LOG.error("initialize: Error reading configuration.", e);
             throw new UndeclaredThrowableException(e);
         }
     }
 
     private void initializeRrdRepository() {
-        LogUtils.debugf(this, "initializeRrdRepository: Initializing RRD repo from WmiCollector...");
+        LOG.debug("initializeRrdRepository: Initializing RRD repo from WmiCollector...");
         initializeRrdDirs();
     }
 
@@ -294,39 +321,31 @@ public class WmiCollector implements ServiceCollector {
         final File f = new File(WmiDataCollectionConfigFactory.getInstance().getRrdPath());
         if (!f.isDirectory()) {
             if (!f.mkdirs()) {
-                throw new RuntimeException("Unable to create RRD file repository.  Path doesn't already exist and could not make directory: " + DataCollectionConfigFactory.getInstance().getRrdPath());
+                throw new RuntimeException("Unable to create RRD file repository.  Path doesn't already exist and could not make directory: " + WmiDataCollectionConfigFactory.getInstance().getRrdPath());
             }
         }
     }
 
-    private void initDatabaseConnectionFactory() {
-        try {
-            DataSourceFactory.init();
-        } catch (final Exception e) {
-            LogUtils.errorf(this, e, "initDatabaseConnectionFactory: Error initializing DataSourceFactory.");
-            throw new UndeclaredThrowableException(e);
-        }
-    }
-
     /** {@inheritDoc} */
+    @Override
     public void initialize(final CollectionAgent agent, final Map<String, Object> parameters) {
-        LogUtils.debugf(this, "initialize: Initializing WMI collection for agent: %s", agent);
-        final Integer scheduledNodeKey = new Integer(agent.getNodeId());
+        LOG.debug("initialize: Initializing WMI collection for agent: {}", agent);
+        final Integer scheduledNodeKey = Integer.valueOf(agent.getNodeId());
         WmiAgentState nodeState = m_scheduledNodes.get(scheduledNodeKey);
 
         if (nodeState != null) {
-            LogUtils.infof(this, "initialize: Not scheduling interface for WMI collection: %s", nodeState.getAddress());
+            LOG.info("initialize: Not scheduling interface for WMI collection: {}", nodeState.getAddress());
             final StringBuffer sb = new StringBuffer();
             sb.append("initialize service: ");
             sb.append(" for address: ");
             sb.append(nodeState.getAddress());
             sb.append(" already scheduled for collection on node: ");
             sb.append(agent);
-            LogUtils.debugf(this, sb.toString());
+            LOG.debug(sb.toString());
             throw new IllegalStateException(sb.toString());
         } else {
-            nodeState = new WmiAgentState(agent.getInetAddress(), parameters);
-            LogUtils.infof(this, "initialize: Scheduling interface for collection: %s", nodeState.getAddress());
+            nodeState = new WmiAgentState(agent.getAddress(), parameters);
+            LOG.info("initialize: Scheduling interface for collection: {}", nodeState.getAddress());
             m_scheduledNodes.put(scheduledNodeKey, nodeState);
         }
     }
@@ -334,11 +353,13 @@ public class WmiCollector implements ServiceCollector {
     /**
      * <p>release</p>
      */
+    @Override
     public void release() {
         m_scheduledNodes.clear();
     }
 
     /** {@inheritDoc} */
+    @Override
     public void release(final CollectionAgent agent) {
         final WmiAgentState nodeState = m_scheduledNodes.get((Integer) agent.getNodeId());
         if (nodeState != null) {
@@ -347,6 +368,7 @@ public class WmiCollector implements ServiceCollector {
     }
 
     /** {@inheritDoc} */
+    @Override
     public RrdRepository getRrdRepository(final String collectionName) {
         return WmiDataCollectionConfigFactory.getInstance().getRrdRepository(collectionName);
     }
